tests/NormalTests/paczka1/fuzzy1/25390065.err
Error in line 3: Ax8 A625 98,9
Error in line 11: SCet A803 272,9
Error in line 32: Ax8 S412 94,9
Error in line 33: Ax8 S560 40,7
